Updating public/index.html public/index.xml stats.sh

--- a/public/index.html
+++ b/public/index.html
@@ -235,6 +235,10 @@ space/time-varying phenomena.
   <DT>WMO<DD>World Meteorological Organization
   <DT>WSDD<DD>Web Service Description Document</p>
 
+<p><DT><a name="X"></a><a href=#contents>X</a><DD>
+  <DT><a name="Y"></a><a href=#contents>Y</a><DD>
+  <DT><a name="Z"></a><a href=#contents>Z</a><DD></p>
+
 <p></DL></p>
 
 <p>Copyright reserved. CMDR.</p>
