--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
   <link rel="shortcut icon" href="/favicon.ico">
 
   
-  <link href="http://duncombe.github.io/glossary/index.xml/" rel="alternate" type="application/rss+xml" title="ocean data acronyms" />
+  <link href="http://duncombe.github.io/index.xml" rel="alternate" type="application/rss+xml" title="ocean data acronyms" />
 </head>
 
 
@@ -67,7 +67,7 @@
 	
 
     <header>
-      <h2><a href='http://duncombe.github.io/glossary/'> </a> </h2>
+      <h2><a href='http://duncombe.github.io/'> </a> </h2>
     
     </header>
 	
@@ -76,7 +76,7 @@
 
 <h1 id="toc_0">glossary</h1>
 
-<p>A glossary of 79 data management terms.</p>
+<p>A glossary of 80 data management terms.</p>
 
 <p>IOOS is a veritable alphabet soup of acronyms and terms that are like-yet-not-like normal language, in another word, jargon.
 This is an attempt to make some sense of it for a relative newcomer. Some (most?) of these terms are in <a href="http://www.ioos.noaa.gov/about/acronym_list.html">IOOS Acronym List</a>.</p>
@@ -124,26 +124,26 @@ part of GSD  Information and Technology Services</p>
   <DT>ESRL<DD> Earth System Research Laboratory
   <DT><a name="F"></a><a href=#contents>F</a><DD>
   <DT><a name="G"></a><a href=#contents>G</a><DD>
-  <DT>GeoJSON<DD>GeoJSON is a JSON format for encoding a variety of geographic
-data structures.  <a href="http://geojson.org/geojson-spec.html">GeoJSON Specification</a>
-<DT>GrADS<DD>The Grid Analysis and Display System (GrADS) is an interactive desktop tool that is used for easy access, manipulation, and visualization of earth science data.
-<DT>GRIB<DD>GRIB (GRIdded Binary or General Regularly-distributed Information in Binary form[1]) is a concise data format commonly used in meteorology to store historical and forecast weather data.
+  <DT>GeoJSON<DD>GeoJSON is a JSON format for encoding a variety of geographic data structures.  <a href="http://geojson.org/geojson-spec.html">GeoJSON Specification</a>
+  <DT>GIS<DD>Geographic Information System
+  <DT>GrADS<DD>The Grid Analysis and Display System (GrADS) is an interactive desktop tool that is used for easy access, manipulation, and visualization of earth science data.
+  <DT>GRIB<DD>GRIB (GRIdded Binary or General Regularly-distributed Information in Binary form[1]) is a concise data format commonly used in meteorology to store historical and forecast weather data.
   <DT>GSD <DD>Global Systems Division (ESRL)
   <DT>GTS <DD>The World Meteorological Organization (WMO) Global Telecommunications System (GTS) disseminates data in near-real-time to operational weather and ocean forecasting centers.</p>
 
 <p><DT><a name="H"></a><a href=#contents>H</a><DD>
-<DT>HDF<DD>Hierarchical Data Format version 4
-<DT>HDF4<DD>Hierarchical Data Format version 4, also known as HDF
-<DT>HDF5<DD>Hierarchical Data Format version 5</p>
+  <DT>HDF<DD>Hierarchical Data Format version 4
+  <DT>HDF4<DD>Hierarchical Data Format version 4, also known as HDF
+  <DT>HDF5<DD>Hierarchical Data Format version 5</p>
 
 <p><DT><a name="I"></a><a href=#contents>I</a><DD>
   <DT>IOOS <DD>Integrated Ocean Observing System
-<DT>IRIS<DD> Incorporated Research Institutions for Seismology
-<DT>Iris<DD><a href="http://scitools.org.uk/iris/">Iris</a> is a Python library for Meteorology and Climatology, a part of Scitools.
-    <DT>ISO<DD>THREDDS service that provides an ISO 19115 metadata representation of data and metadata structure. Packaged with ncISO.</p>
+  <DT>IRIS<DD> Incorporated Research Institutions for Seismology
+  <DT>Iris<DD><a href="http://scitools.org.uk/iris/">Iris</a> is a Python library for Meteorology and Climatology, a part of Scitools.
+  <DT>ISO<DD>THREDDS service that provides an ISO 19115 metadata representation of data and metadata structure. Packaged with ncISO.</p>
 
 <p><DT><a name="J"></a><a href=#contents>J</a><DD>
-<DT>JSON<DD>JavaScript Object Notation
+  <DT>JSON<DD>JavaScript Object Notation
   <DT><a name="K"></a><a href=#contents>K</a><DD>
   <DT><a name="L"></a><a href=#contents>L</a><DD>
   <DT><a name="M"></a><a href=#contents>M</a><DD>
