--- a/website-install/index.html
+++ b/website-install/index.html
@@ -10,9 +10,9 @@
   <title>  &middot; ocean data acronyms </title>
 
   
-  <link rel="stylesheet" href="http://duncombe.github.io/glossary/css/poole.css">
-  <link rel="stylesheet" href="http://duncombe.github.io/glossary/css/syntax.css">
-  <link rel="stylesheet" href="http://duncombe.github.io/glossary/css/hyde.css">
+  <link rel="stylesheet" href="http://localhost:1313/css/poole.css">
+  <link rel="stylesheet" href="http://localhost:1313/css/syntax.css">
+  <link rel="stylesheet" href="http://localhost:1313/css/hyde.css">
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700|Abril+Fatface">
 
   
@@ -27,7 +27,7 @@
 <body>
 
 <div class="sidebar">
-   	<p>  <img src="http://duncombe.github.io/glossary/images/ioos_blue2.png"
+   	<p>  <img src="http://localhost:1313/images/ioos_blue2.png"
    	alt="ioos_blue2.png"> </p> 
 
 	<div class="container sidebar-sticky">
@@ -40,8 +40,8 @@
 
 
     <ul class="sidebar-nav">
-	  <li><a href="http://duncombe.github.io/glossary">home</a> </li>
-	  <li><a href="http://duncombe.github.io/glossary/website-install/">about glossary</a> </li>
+	  <li><a href="http://localhost:1313">home</a> </li>
+	  <li><a href="http://localhost:1313/website-install/">about glossary</a> </li>
 	  <li><a href="https://github.com/duncombe/glossary">glossary on github</a> </li>
 	  <li><a href="http://ioos.github.io" target="_blank">IOOS github pages</a> </li>
       
@@ -116,5 +116,8 @@ git subtree push --prefix=public origin gh-pages
 </div>
 </div>
 
-  </body>
+  <script>document.write('<script src="http://'
+        + (location.host || 'localhost').split(':')[0]
+		+ ':1313/livereload.js?mindelay=10"></'
+        + 'script>')</script></body>
 </html>
