--- a/index.html
+++ b/index.html
@@ -135,8 +135,7 @@ This is an attempt to make some sense of it for a relative newcomer. Some (most?
   <DT>CF <DD>Climate and Forecast (CF)
   <DT>COMT<DD>Coastal and Ocean Modeling Testbed
   <DT>COOL<DD>Coastal Ocean Observation Lab (Rutgers University)
-  <DT>CoRTAD
-  <DD> Coral Reef Temperature Anomaly Database (NODC/CoRTAD)
+  <DT>CoRTAD<DD>Coral Reef Temperature Anomaly Database (NODC/CoRTAD)
   <DT>CSV
   <DD>Comma Separated Values (sometimes CSV/TSV)
   <DT>CSW <DD>Catalog Services for the Web. Service provided by OGC.</p>
