--- a/public/website-install/index.html
+++ b/public/website-install/index.html
@@ -10,9 +10,9 @@
   <title>  &middot; ocean data acronyms </title>
 
   
-  <link rel="stylesheet" href="http://duncombe.github.io/glossary/css/poole.css">
-  <link rel="stylesheet" href="http://duncombe.github.io/glossary/css/syntax.css">
-  <link rel="stylesheet" href="http://duncombe.github.io/glossary/css/hyde.css">
+  <link rel="stylesheet" href="http://localhost:1313/css/poole.css">
+  <link rel="stylesheet" href="http://localhost:1313/css/syntax.css">
+  <link rel="stylesheet" href="http://localhost:1313/css/hyde.css">
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700|Abril+Fatface">
 
   
@@ -27,7 +27,7 @@
 <body>
 
 <div class="sidebar">
-   	<p>  <img src="http://duncombe.github.io/glossary/images/ioos_blue2.png"
+   	<p>  <img src="http://localhost:1313/images/ioos_blue2.png"
    	alt="ioos_blue2.png"> </p> 
 
 	<div class="container sidebar-sticky">
@@ -40,8 +40,8 @@
 
 
     <ul class="sidebar-nav">
-	  <li><a href="http://duncombe.github.io/glossary">glossary home</a> </li>
-	  <li><a href="http://duncombe.github.io/glossary/website-install/">about glossary</a> </li>
+	  <li><a href="http://localhost:1313">glossary home</a> </li>
+	  <li><a href="http://localhost:1313/website-install/">about glossary</a> </li>
 	  <li><a href="https://github.com/duncombe/glossary">glossary on github</a> </li>
 	  <li><a href="http://ioos.github.io" target="_blank">IOOS github pages</a> </li>
       
@@ -76,20 +76,20 @@
 <h1 id="toc_0">glossary structure and installation</h1>
 
 <p>The website relies on Hugo for creation and deployment.  The premise is to have
-the document appear in both the github readme.md and the website index.html.
-The way this is accomplished is to sym-link the README.md to index.md in the
-content subdir. Thus Hugo creates index.html in public, while the same document
-still appears in the github repository. Scripts like stats.sh need to be aware
-of the sym-link so that they preserve it and the relationship between the
-files.</p>
+the document appear in both the github <code>README.md</code> and the website
+<code>index.html</code>.  The way this is accomplished is to sym-link the <code>README.md</code> to
+<code>index.md</code> in the content subdir. Thus Hugo creates <code>index.html</code> in public,
+while the same document still appears in the github repository. Scripts like
+<code>stats.sh</code> need to be aware of the sym-link so that they preserve it and the
+relationship between the files.</p>
 
 <p>It turns out that the above fix is problematic for GitHub if the symlink points
-to README.md from index.md. Having the link point the other way is a problem
-for hugo, but we fix that by making some changes in the scripts.</p>
+to <code>README.md</code> from <code>index.md</code>. Having the link point the other way is a
+problem for <code>hugo</code>, but we fix that by making some changes in the scripts.</p>
 
 <p>Automating the website build process is scary if it is all in one script. The
-update.sh script is now split into generate.sh which builds the new website,
-and update.sh, which runs does some commits and pushes the changes and pages up
+old <code>update.sh</code> script is now split into <code>generate.sh</code> which builds the new website,
+and <code>update.sh</code>, which does some commits and pushes the changes and pages up
 to GitHub.</p>
 
 <h1 id="toc_1">Installing changes to the website</h1>
@@ -134,5 +134,8 @@ git subtree push --prefix=public origin gh-pages
 </div>
 </div>
 
-  </body>
+  <script>document.write('<script src="http://'
+        + (location.host || 'localhost').split(':')[0]
+		+ ':1313/livereload.js?mindelay=10"></'
+        + 'script>')</script></body>
 </html>
